[gd_scene load_steps=5 format=3 uid="uid://btdfh0yqay213"]

[ext_resource type="Script" uid="uid://bsj7s31kh3xgh" path="res://Scripts/dungeon.gd" id="1_bujp0"]
[ext_resource type="TileSet" uid="uid://cjx0wr5alti0q" path="res://Visuals/TileSets/test_world.tres" id="1_c26mr"]
[ext_resource type="PackedScene" uid="uid://brf4rprta6wcy" path="res://Components/terrain_mod.tscn" id="2_bujp0"]
[ext_resource type="Script" uid="uid://bj5xcxaq0nry7" path="res://Scripts/free_camera.gd" id="4_5eyrg"]

[node name="dungeon" type="Node2D"]
script = ExtResource("1_bujp0")

[node name="Background_Layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
modulate = Color(0.691357, 0.691357, 0.691357, 1)
tile_set = ExtResource("1_c26mr")
collision_enabled = false

[node name="Main_Layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
z_index = 1
tile_set = ExtResource("1_c26mr")

[node name="Foreground_Layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
z_index = 20
tile_set = ExtResource("1_c26mr")
collision_enabled = false

[node name="Terrain_Mod" parent="." node_paths=PackedStringArray("background_layer", "main_layer", "foreground_layer") instance=ExtResource("2_bujp0")]
unique_name_in_owner = true
background_layer = NodePath("../Background_Layer")
main_layer = NodePath("../Main_Layer")
foreground_layer = NodePath("../Foreground_Layer")

[node name="FreeCamera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_enabled = true
script = ExtResource("4_5eyrg")
